force-app/main/default/objects/Form__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the form is active and accessible</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>