force-app/main/default/objects/Form__c/fields/Allowed_Domains__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Domains__c</fullName>
    <description>Newline-separated list of domains allowed to embed this form. Example: example.com&#10;mysite.org&#10;Leave empty to disable external embedding (form can only be hosted on Salesforce Site).</description>
    <inlineHelpText>Enter one domain per line (e.g., example.com). Leave empty to disable external embedding.</inlineHelpText>
    <label>Allowed Domains</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>