force-app/main/default/objects/Form__c/fields/Default_Case_Values__c.field-meta.xml
<CustomField>
    <fullName>Default_Case_Values__c</fullName>
    <description>JSON object of default Case field values applied when a case is created from this form. Example: {"Priority":"High","Type":"Problem"}. Allowed fields: Priority, Status, Origin, Type, Reason.</description>
    <inlineHelpText>JSON object of default Case field values. Example: {"Priority":"High","Type":"Problem"}</inlineHelpText>
    <label>Default Case Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>