force-app/main/default/objects/Form__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Intro text shown above the form fields</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>