force-app/main/default/objects/Form__c/fields/Enable_Captcha__c.field-meta.xml
<CustomField>
    <fullName>Enable_Captcha__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, form submissions require reCAPTCHA verification to prevent spam and bot submissions.</description>
    <inlineHelpText>Enable Google reCAPTCHA v2 to protect this form from spam and bot submissions.</inlineHelpText>
    <label>Enable CAPTCHA</label>
    <type>Checkbox</type>
</CustomField>