force-app/main/default/objects/Form__c/fields/Enable_File_Upload__c.field-meta.xml
<CustomField>
    <fullName>Enable_File_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow file attachments on this form</description>
    <label>Enable File Upload</label>
    <type>Checkbox</type>
</CustomField>