force-app/main/default/objects/Form__c/fields/Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Name__c</fullName>
    <description>URL-friendly identifier for the form (e.g., "support", "contact")</description>
    <externalId>true</externalId>
    <label>Form Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>