force-app/main/default/objects/Form__c/fields/Max_File_Size_MB__c.field-meta.xml
<CustomField>
    <fullName>Max_File_Size_MB__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Maximum file size in megabytes</description>
    <label>Max File Size (MB)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>