force-app/main/default/objects/Form__c/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <description>Site override for this form's public URL. If blank, uses the default Site configured in reCAPTCHA Settings.</description>
    <inlineHelpText>Leave blank to use the default Site, or select a specific Site for this form's public URL.</inlineHelpText>
    <label>Site Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>