force-app/main/default/objects/Form__c/fields/Success_Message__c.field-meta.xml
<CustomField>
    <fullName>Success_Message__c</fullName>
    <description>Message shown after successful form submission</description>
    <label>Success Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>